# RMSNORM-CUDA

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  benchmark.py  benchmark_add_rmsnorm.py  draw_4.py  environment.yml  gen_benchmark_results.py  plot_benchmark_results.py  profile_rmsnorm.py  pyproject.toml  replace.py  replace2.py  rmsnorm_timeline.nsys-rep  roofline.md  run_ncu_benchmark.py  run_ncu_benchmark_add_rmsnorm.py  test.py  test_ppl.py  thesis_draft.md  thesis_draft.md.bak  verify_accuracy.py  verify_ppl.py  为什么kernel1比kernel0快.md  任务安排-decode.md  开题报告.md
assets/: .$图3-2.drawio.png.bkp
assets/addrmsnorm/: 0_kernel_add_results.txt  1_kernel_add_results.txt  2_kernel_add_results.txt  3_kernel_add_results.txt  4_kernel_add_results.txt  kernel_0_add_results.txt  kernel_1_add_results.txt  kernel_2_add_results.txt
assets/benchmark_results/: 0_results_kernel.txt  1_results_kernel.txt  2_results_kernel.txt  3_results_kernel.txt  6_results_kernel.txt  7_results_kernel.txt
benchmark_results/: 0_results_kernel.txt  3_results_kernel.txt  4_results_kernel.txt  5_results_kernel.txt  6_results_kernel.txt
docs/: kernel2to3.md
ncu/: 1_native.cu
ncu_reports/: benchmark.py_ncu_log.txt  my_report_analysis.md  my_report_ncu_log.txt  my_report_raw.csv  my_report_summary.txt  rmsnorm_analysis.md
scripts/benchmark/: benchmark.py  benchmark_add_rmsnorm.py  benchmark_conv.py  benchmark_more_batch_size.py  run_ncu_benchmark.py  run_ncu_benchmark_add_rmsnorm.py  run_ncu_benchmark_more_batch_size.py
scripts/draw/: draw-2-1.py  draw-2-2.py  (+4 more)
src/: kernels.cuh  runner.cu
(+14 files in other folders)
